# wasm-webserial-demo

./: Cargo.toml  LICENSE  README.md  index.css  index.html  index.js  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.mjs  rust-toolchain.toml  webpack.config.mjs
.github/: dependabot.yml
.github/workflows/: build.yml
src/: app.rs  lib.rs  util.rs  view.rs
